@@ -30,6 +30,7 @@ I owe these people/groups my thanks for help with GeSHi. Thanks, guys!
                           method
 - forum.qbasicnews.com  - Thanks for putting up with the crappy versions
                           that I "forced" on you guys before ;)
+- Gizmore               - Providing some patch to query supported languages
 - Jack Lloyd            - Thanks for pointing out the versioning and method CSS bugs, and giving
                           me the extra C/C++ keywords
 - Karim Scheik          - Thanks for the php5 support report
